# Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform

./: .dockerignore  .env.example  .gitignore  .windsurfrules  COMPLETION_SCOPE.md  Cargo.toml  Dockerfile  LICENSE  Multi-agent-Swarm-Helix-Spec  README.md  docker-compose.yml  progress.md  troubleshooting.md
.github/workflows/: ci.yml  pages.yml  release-binaries.yml
.roo/: mcp.json
crates/helix-agent-sdk/: Cargo.toml
crates/helix-agent-sdk-macros/: Cargo.toml
crates/helix-agent-sdk-macros/src/: lib.rs
crates/helix-agent-sdk-macros/tests/: trybuild.rs
crates/helix-agent-sdk-macros/tests/trybuild_cases/: 01_source_agent_valid.rs  02_action_agent_valid.rs
crates/helix-agent-sdk/src/: lib.rs
crates/helix-api/: Cargo.toml
crates/helix-api/src/: evm_rpc.rs  intel.rs  main.rs
crates/helix-core/: Cargo.toml
crates/helix-core/examples/: mutation_quality_tool.rs  mutation_testing_demo.rs  quality_demo.rs  tes_driven_development.rs  tes_driven_testing.rs
crates/helix-core/src/: agent.rs  autopilot_guard.rs  credential.rs  deterministic_agent_catalog.rs  deterministic_agent_profiles.rs  deterministic_agents.rs  deterministic_agents_expanded.rs  deterministic_policy.rs  errors.rs  event.rs  execution_kernel.rs  filter_agent.rs  intel_desk.rs  intel_priority.rs  lib.rs  llm_agent.rs  market_intel.rs  onchain_intent.rs  policy.rs  profile.rs  quality_analysis.rs  quality_assessment.rs  reasoning.rs  recipe.rs  state.rs  timer_agent.rs  types.rs
crates/helix-core/src/mutation_testing/: ARCHITECTURE.md  FRAMEWORK_GUIDE.md  PRACTICAL_GUIDE.md  README.md  demo.rs  evaluator.rs  evolution.rs  evolutionary_demo.rs  mod.rs  mutator.rs  operators.rs  practical_analyzer.rs  practical_analyzer_tests.rs  quality_assessment.rs  reporting.rs  test_effectiveness.rs
crates/helix-core/src/reasoning/: expert.rs  neuro.rs  symbolic.rs
crates/helix-core/src/state/: in_memory_store.rs
crates/helix-core/src/test_utils/: mod.rs
crates/helix-core/tests/: mutation_testing_integration.rs  tes_agent_tests.rs  tes_event_tests.rs
crates/helix-embeddings/: Cargo.toml
crates/helix-embeddings/src/: embeddings.rs  errors.rs  lib.rs  search.rs  storage.rs
crates/helix-gui/: Cargo.toml
crates/helix-gui/src/: lib.rs
crates/helix-llm/: Cargo.toml
crates/helix-llm/src/: agents.rs  context.rs  errors.rs  intent_lattice.rs  lib.rs  parsers.rs  prompts.rs  providers.rs
crates/helix-rule-engine/: Cargo.toml
crates/helix-rule-engine/src/: event_listener.rs  lib.rs
crates/helix-runtime/: Cargo.toml
crates/helix-runtime/src/: agent_registry.rs  agent_runner.rs  imperative_shell.rs  lib.rs  messaging.rs
crates/helix-runtime/tests/: agent_registry_smoke.rs  integration_tests.rs  rule_recipe_execution.rs
crates/helix-runtime/tests/common/: mod.rs  test_agents.rs
crates/helix-security/: Cargo.toml
crates/helix-security/src/: audit.rs  auth.rs  encryption.rs  errors.rs  lib.rs  policies.rs
crates/helix-storage/: Cargo.toml
crates/helix-storage/src/: lib.rs  postgres_state_store.rs
crates/helix-wasm/: Cargo.toml
crates/helix-wasm/src/: errors.rs  host_functions.rs  lib.rs  plugins.rs  runtime.rs  sandbox.rs  utils.rs
crates/helix-wasm/tests/: host_functions.rs
crates/helix-zkvm/: Cargo.toml
crates/helix-zkvm/src/: circuits.rs  errors.rs  lib.rs  proofs.rs  risc0.rs  sp1.rs  verifier.rs
docs/: CYCLOMATIC_COMPLEXITY_ANALYSIS.md  THIRD_PARTY_LICENSES.md  architectural_improvement_proposal_core_components.md  formal_core_imperative_shell.md  high_roi_deterministic_agents.md  install.md  intelligence_desk.md  specification.md  typescript_sdk_plan.md
formal/esso/: onchain_tx_intent.yaml
formal/esso/roi_agents/: allowlist_guard.yaml  approval_gate.yaml  backpressure.yaml  circuit_breaker.yaml  dedup_window.yaml  fee_bidding.yaml  sla_deadline.yaml
formal/lean/: HelixProofs.lean  PROOF_REVIEW.md  lake-manifest.json  lakefile.lean
formal/lean/HelixProofs/: Credibility.lean  IntelPriority.lean
formal/models/: autopilot_guard.yaml  helix_execution_kernel.yaml  intel_case_file.yaml
formal/models/reasoning/: expert_system_gate.yaml  neuro_risk_gate.yaml  neuro_symbolic_fusion_gate.yaml  symbolic_reasoning_gate.yaml
formal/models/roi_agents/: dlq_budget.yaml  finality_guard.yaml  nonce_manager.yaml  retry_budget.yaml  token_bucket.yaml
helix-ts-sdk/: asconfig.json  deno.json  package-lock.json  package.json
helix-ts-sdk/assembly/: exports.ts  index.ts  mod.ts
helix-ts-sdk/assembly/core/: context.ts  types.ts
helix-ts-sdk/assembly/examples/: credential-example.ts  daily-briefing-agent.ts  http-example.ts  index.ts  random-example.ts  state-example.ts
helix-ts-sdk/assembly/host/: config.ts  credential.ts  event.ts  http.ts  index.ts  log.ts  random.ts  state.ts  time.ts
helix-ts-sdk/assembly/utils/: errors.ts  memory.ts
helix-ts-sdk/examples/: simple_source_agent.ts
helix-ts-sdk/src/core/: agent.ts  context.ts  types.ts
helix-ts-sdk/src/host/: index.ts  log.ts  time.ts
helix-ts-sdk/src/utils/: errors.ts  memory.ts
migrations/: 001_helix_core.sql
scripts/: install_helix.ps1  install_helix.sh  run_compose.sh  run_local.sh  run_mutation_analysis  run_mutation_analysis.rs  setup_local.sh  verify_esso_core.sh  verify_esso_roi_agents.sh  verify_formal_agents.sh  verify_formal_agents_internal.sh  verify_formal_core.sh  verify_formal_core_internal.sh  verify_release.sh
site/: 404.html  index.html  main.js  styles.css
ui/: index.html  package-lock.json  package.json  playwright.config.ts
ui/e2e/: golden-path.spec.ts
ui/src/: router.tsx  styles.css
ui/src/lib/: api.ts  apiAuth.ts  autopilotWorkspace.ts  effectHttp.ts  intelDeskWorkspace.ts  operatorPreferences.ts
ui/src/screens/: AgentCatalogPage.tsx  AuditPage.tsx  AutopilotPage.tsx  CasesPage.tsx  CredentialsPage.tsx  DashboardPage.tsx  EvidencePage.tsx  MarketIntelPage.tsx  OnchainPage.tsx  PolicyWorkbenchPage.tsx  RulesPage.tsx  SourcesPage.tsx  WatchlistsPage.tsx
