[package]
name = "helix-agent-sdk-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Procedural macros for the Helix agent SDK"
repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
async-trait = "0.1" # Added for generating async trait impls
linkme = "0.3"      # For distributed slice agent registration

# Dependency on the SDK itself to access trait definitions if needed,
# though typically macros operate on token streams.
# For now, let's assume we might need to reference types from it.
helix-agent-sdk = { path = "../helix-agent-sdk" }
helix-core = { path = "../helix-core" } # For AgentId, AgentConfig, HelixEvent etc.
[dev-dependencies]
trybuild = "1.0"
