[package]
name = "helix-agent-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDK for building agents on the Helix platform"
repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"

[dependencies]
helix-core = { path = "../helix-core" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmp-serde = "1.1" # For MessagePack serialization

# Add SDK-specific dependencies (macros, wasm tooling) later
