[package]
name = "helix-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "REST API server for the Helix platform"
repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"

[dependencies]
helix-core = { path = "../helix-core" }
helix-agent-sdk = { path = "../helix-agent-sdk" }
helix-embeddings = { path = "../helix-embeddings" }
helix-llm = { path = "../helix-llm" }
helix-rule-engine = { path = "../helix-rule-engine" }
helix-runtime = { path = "../helix-runtime" }
helix-security = { path = "../helix-security" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"] }
tower-http = { version = "0.5.0", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
tower = { version = "0.5", features = ["util"] }
