[package]
name = "helix-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add core dependencies here, e.g., tokio, serde, tracing, etc.
tokio = { version = "1", features = ["full"] } # Keep explicit for now
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.8", features = ["v4", "serde"] } # Keep explicit for now

[lib]
name = "helix_core"
path = "src/lib.rs"
