[package]
name = "helix-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add core dependencies here, e.g., tokio, serde, tracing, etc.
tokio = { version = "1", features = ["full"] } # Keep explicit for now
async-trait = { workspace = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1" # Added for mock encryption service in tests

[lib]
name = "helix_core"
path = "src/lib.rs"
