[package]
name = "helix-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core functionality for the Helix multi-agent platform with zkVM capabilities"
repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"

[[bin]]
name = "quality_analyzer"
path = "src/bin/quality_analyzer.rs"
required-features = ["mutation-testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add core dependencies here, e.g., tokio, serde, tracing, etc.
tokio = { version = "1", features = ["full"] } # Keep explicit for now
async-trait = { workspace = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
sqlx = { workspace = true }

# Mutation testing dependencies
regex = { version = "1.10", optional = true }
rand = { version = "0.8", optional = true }
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1" # Added for mock encryption service in tests
futures = "0.3"

[features]
default = []
mutation-testing = ["regex", "rand", "tempfile"]

[lib]
name = "helix_core"
path = "src/lib.rs"
