[package]
name = "helix-gui"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
helix-core = { path = "../helix-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]
proptest = "1.3"
hyper = { version = "1", features = ["full"] }
