[package]
name = "helix-rule-engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rule engine for the Helix platform"
repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"

[dependencies]
helix-core = { path = "../helix-core" }

# Add rule engine dependencies (cedar, rete implementation) later
