[package]
name = "helix-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Runtime environment for executing Helix agents"
repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-core = { path = "../helix-core" }
helix-agent-sdk = { path = "../helix-agent-sdk" }
helix-wasm = { path = "../helix-wasm" } # Added helix-wasm
async-nats = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
futures = { workspace = true }

# Add specific runtime dependencies like tokio, nats, etc. later

[dev-dependencies]
mockall = "0.12"
wiremock = "0.6"
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
testcontainers = "0.15" # Check for latest version
testcontainers-modules = { version = "0.3", features = ["postgres"] } # Check for latest version
helix-agent-sdk-macros = { path = "../helix-agent-sdk-macros" }
helix-rule-engine = { path = "../helix-rule-engine" }

[features]
test = []
