[package]
name = "helix-security"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"
description = "Security and encryption utilities for Helix"

[dependencies]
helix-core = { path = "../helix-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
aes-gcm = "0.10.3"
rand = "0.8.5"
hex = "0.4.3"
# age = { workspace = true }    # Commented out for now
# ring = { workspace = true }   # Commented out for now
# cedar-policy = { workspace = true }  # Commented out for now
sha2 = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
