[package]
name = "helix-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
helix-core = { path = "../helix-core" }
async-trait = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "json", "uuid"] }
tokio = { workspace = true }
serde_json = { workspace = true }
