[package]
name = "helix-zkvm"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge virtual machine integration for Helix agents"

[dependencies]
helix-core = { path = "../helix-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# zkVM dependencies (commented out for now due to compilation complexity)
# risc0-zkvm = { workspace = true }
# sp1-sdk = { workspace = true }
sha2 = "0.10"
uuid = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
# risc0-build = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
